@@ -20,7 +20,7 @@ Name: rpm
 %define version @VERSION@
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 0.8
+Release: 0.10
 Group: System Environment/Base
 Source: ftp://ftp.rpm.org/pub/rpm/dist/rpm-4.0.x/rpm-%{rpm_version}.tar.gz
 License: GPL
@@ -494,6 +494,12 @@ exit 0
 %{__includedir}/popt.h
 
 %changelog
+* Tue Jan 25 2005 Jeff Johnson <jbj@jbj.org> 4.4.1-0.10
+- more macosx fiddles.
+- move global /var/lock/rpm/transaction to dbpath.
+- permit fcntl path to be configured through rpmlock_path macro.
+- add missing #if defined(ENABLE_NLS) (#146184).
+
 * Mon Jan 17 2005 Jeff Johnson <jbj@jbj.org> 4.4.1-0.8
 - changes to build on Mac OS X using darwinports neon/beecrypt.
 - add https://svn.uhulinux.hu/packages/dev/zlib/patches/02-rsync.patch
